# swiss-ai-mcp-commons

./: CHANGELOG.md  DEPLOYMENT.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CONTENT_NEGOTIATION.md
src/swiss_ai_mcp_commons/: __init__.py  serialization.py
src/swiss_ai_mcp_commons/http/: __init__.py  client.py  content_negotiation.py  integration.py
src/swiss_ai_mcp_commons/logging/: __init__.py  setup.py
src/swiss_ai_mcp_commons/models/: __init__.py  location.py  pricing.py  time.py  weather.py
src/swiss_ai_mcp_commons/validation/: __init__.py  exceptions.py  validators.py
tests/: conftest.py  test_content_negotiation.py  test_models.py  test_serialization.py  test_validation.py
